--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#f52e37" />
+    <meta name="color-scheme" content="light only">
     <link rel="icon" href="/icons/favicon.ico" sizes="64x64 32x32 24x24 16x16">
     <link rel="mask-icon" href="/icons/pokeball.svg" color="#FFFFFF">
     <link rel="icon" type="image/png" href="/icons/android-chrome-192x192.png" sizes="192x192">
