--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.webmanifest/manifest.json">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+    <link rel="stylesheet" defer href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css" media="print" onload="this.media='all'">
     <title>Pokédex PWA</title>
   </head>
   <body>
